objects/Data_Load_Log__c.object
<CustomObject>
    <description>Logs information about data loads such as status and success/failure statistics.</description>
    <fields>
        <fullName>BatchNext_ID__c</fullName>
        <label>BatchNext ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <description>This is the id of the batch that the Data Load Log was created for</description>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <description>text representation of the end time field</description>
        <label>End Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Date/time this load finished processing.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Records__c</fullName>
        <description>Number of failed records.</description>
        <label>Failed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <description>Any messages generated during the load.</description>
        <label>Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed_Record_Type__c</fullName>
        <label>Processed Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Records__c</fullName>
        <description>The total number of records processed successfully by this batch.</description>
        <inlineHelpText>The total number of records processed successfully by this batch.</inlineHelpText>
        <label>Processed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the reporting period that created this data load log</description>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Data Load Log</relationshipLabel>
        <relationshipName>Data_Load_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the setup object whose publish created this data load log</description>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Data Load Log</relationshipLabel>
        <relationshipName>Data_Load_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <description>text representation of the start time field</description>
        <label>Start Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Date/time this load was started.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this data load.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <description>Total number of records processed.</description>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of data loaded.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Staff/Section</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Student/Section</fullName>
                </value>
                <value>
                    <fullName>Interventions Data Deactivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Load Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Failed_Records__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DLL-{0000000}</displayFormat>
        <label>Data Load Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Load Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>